Weakness calculator now super accurate

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!--<link rel="icon" type="image/svg+xml" href="/vite.svg" />-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="https://www.pngitem.com/pimgs/m/163-1634065_master-ball-sprite-png-png-download-pokeball-pixel.png" />
     <title>Pokédex</title>
   </head>
   <body>
